default lifecycles to be enabled in absence of use.* config properties